# fursa

./: Cargo.toml
.github/workflows/: ci.yml
crates/fursa-difference/: Cargo.toml
crates/fursa-difference/src/: lib.rs
crates/fursa-differential/: Cargo.toml
crates/fursa-differential/src/: lib.rs
py-fursa/: pyproject.toml
