[package]
name = "fursa-difference"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Mathematical epidemiology modelling with diffence equations"
